--- a/static/css/style.css
+++ b/static/css/style.css
@@ -245,7 +245,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
   background: rgba(0,0,0,0.4);
 }
 .intro h1 {
-  font-family: 'Rochester', cursive;
+  font-family: 'Anton', cursive;
   color: #fff;
   font-size: 5em;
   font-weight: 400;
