--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,9 +4,14 @@
 }
 
 body{
-  background: #F2F6D3;
+  background: url(../img/intro-bg.jpg) center center / cover scroll no-repeat;
+  /*background-color: #e5e5e5;*/
+  /*background: #F2F6D3;*/
 }
 
+.overlay {
+  background: rgba(0,0,0,0.4);
+}
 .wrapper{
   position: absolute;
   top: 50%;
@@ -234,18 +239,13 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
   display: table;
   width: 100%;
   padding: 0;
-  background: url(../img/intro-bg.jpg) center center no-repeat;
-  background-color: #e5e5e5;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
 }
-.intro .overlay {
-  background: rgba(0,0,0,0.4);
-}
 .intro h1 {
-  font-family: 'Anton', cursive;
+  font-family: 'Courgette', cursive;
   color: #fff;
   font-size: 5em;
   font-weight: 400;
