--- a/templates/DinO.html
+++ b/templates/DinO.html
@@ -4,22 +4,28 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link href="https://fonts.googleapis.com/css?family=Anton|Taprom" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}"> -->
 
 <style>
-  body {font-family: 'Taprom', cursive;}
+  body {font-family: 'Courgette', cursive;}
   .w3-row img {margin-bottom: -8px}
 </style>
+
 
 <head>
   <meta charset="UTF-8">
   <title>DinO</title>
       <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}"> <!-- CHECK THIS -->
+  <link rel="shortcut icon" href="">
 </head>
 
-<header>
+<!-- <header>
+</header> -->
+
+<body>
+
   <div class="intro">
     <div class="overlay">
       <div class="container_bac">
@@ -31,15 +37,11 @@
       </div>
     </div>
   </div>
-</header>
-
-<body>
-
-  <div class="w3-content" style="max-width:1500px">
-      <header class="w3-container w3-xxlarge w3-padding-24">
+  <!-- <div class="w3-content" style="max-width:1500px"> -->
+      <!-- <header class="w3-container w3-xxlarge w3-padding-24"> -->
       <!-- <a href="#" class="w3-left w3-button w3-white"><b>DinO</a>   -->
-    </header>
-  </div>
+    <!-- </header> -->
+  <!-- </div> -->
 
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -48,6 +50,7 @@
 <div class="wrapper">
   <div class="container">
     <input type="text" class="input" placeholder="Search Restaurants">
+    <!-- <script src="{{url_for('static', filename='search.js')}}"></script> -->
     <i class="fa fa-search" aria-hidden="true"></i>
   </div>
 </div>
