shifted 'DinO' heading

--- a/templates/DinO.html
+++ b/templates/DinO.html
@@ -28,12 +28,8 @@
 
   <div class="intro">
     <div class="overlay">
-      <div class="container_bac">
-        <div class="row">
-          <div class="intro-text">
-            <h1>DinO</h1>
-          </div>
-        </div>
+      <div class="intro-text">
+        <h1 style="text-align:center">DinO</h1>
       </div>
     </div>
   </div>
