--- a/templates/DinO.html
+++ b/templates/DinO.html
@@ -15,29 +15,26 @@
 
 
 <head>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <meta charset="UTF-8">
   <title>DinO</title>
       <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}"> <!-- CHECK THIS -->
-  <link rel="shortcut icon" href="">
+  <link rel="shortcut icon" href="static/img/favicon.ico">
 </head>
 
 <!-- <header>
 </header> -->
 
 <body>
-
+  <div class="outerwrapper">
   <div class="intro">
     <div class="overlay">
       <div class="intro-text">
-        <h1 style="text-align:center">DinO</h1>
+        <h1 style="text-align:center">DineOut</h1>
       </div>
     </div>
   </div>
-  <!-- <div class="w3-content" style="max-width:1500px"> -->
-      <!-- <header class="w3-container w3-xxlarge w3-padding-24"> -->
-      <!-- <a href="#" class="w3-left w3-button w3-white"><b>DinO</a>   -->
-    <!-- </header> -->
-  <!-- </div> -->
+</div>
 
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
