--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,11 +4,15 @@
 }
 
 body{
-  background: url(../img/intro-bg.jpg) center center / cover scroll no-repeat;
+  background: url(../img/intro-bg.jpg) center center / cover scroll no-repeat
   /*opacity:30%;*/
   /*background-color: #e5e5e5;*/
   /*background: #F2F6D3;*/
 }
+
+/*div.ex1{
+  overflow: scroll;
+}*/
 
 .outerwrapper
 {
