--- a/templates/DinO.html
+++ b/templates/DinO.html
@@ -43,14 +43,14 @@
 <div class="wrapper">
   <div class="container">
     <form action="search">
-      <input type="text" class="input" placeholder="Search Cities" autocomplete="on" formaction="https://developers.zomato.com/api/v2.1/categories">
+      <input type="text" class="input" placeholder="Search Cities" autocomplete="on" formaction="https://developers.zomato.com/api/v2.1/categories" id="mySearch">
     </form>
     <i class="fa fa-search" aria-hidden="true"></i>
   </div>
 </div>
 
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-  <script src="{{url_for('static', filename='script.js')}}"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+<script src="{{url_for('static', filename='script.js')}}"></script>
 
 </body>
 
