--- a/templates/DinO.html
+++ b/templates/DinO.html
@@ -39,19 +39,33 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<select id="City">
+  <option value="6777">Rolla</option>
+  <option value="844">St. Louis</option>
+</select>
 
 <div class="wrapper">
   <div class="container">
-    <form action="search">
+    <!-- <form action="search"> -->
       <input type="text" class="input" placeholder="Search Cities" autocomplete="on" formaction="https://developers.zomato.com/api/v2.1/categories" id="mySearch">
-    </form>
+    <!-- </form> -->
     <i class="fa fa-search" aria-hidden="true"></i>
   </div>
+</div>
+
+<div id="data">
+
 </div>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 <script src="{{url_for('static', filename='script.js')}}"></script>
 
+
+
+
+
 </body>
 
 </html>
+
+
