--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,14 +5,67 @@
 
 body{
   background: url(../img/intro-bg.jpg) center center / cover scroll no-repeat
-  /*opacity:30%;*/
-  /*background-color: #e5e5e5;*/
-  /*background: #F2F6D3;*/
 }
 
-/*div.ex1{
-  overflow: scroll;
-}*/
+li {
+ display: block;
+ transition-duration: 0.5s;
+}
+
+li:hover {
+  cursor: pointer;
+}
+
+.positioning{
+  position: absolute;
+  font-family: 'Pacifico', cursive;
+  color: #000000;
+  top: 20%;
+  left: 80%;
+  font-weight: bold;
+  font-size: 13px;
+  /*transform: translate(-50%, -50%);*/
+}
+
+select{
+  width: 130px;
+  height: 50px;
+  background: #41484a;
+  right: 68%;
+  left: 32%;
+  transform: : translate(-45%, -50%);
+  text-align: center;
+  line-height: 45px;
+  padding-right: 50px;
+  transition: all 0.5s ease;
+  border-radius: 5px;
+  border: none;
+  color: #fff;
+  position: relative;
+  box-shadow: 0 0 50px rgba(0,0,0,0.5);
+}
+
+ul li ul {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  transition: all 0.5s ease;
+  margin-top: 1rem;
+  left: 0;
+  display: none;
+}
+
+ul li:hover > ul,
+ul li ul:hover {
+  visibility: visible;
+  opacity: 1;
+  display: block;
+}
+
+ul li ul li {
+  clear: both;
+  width: 100%;
+}
 
 .outerwrapper
 {
@@ -30,6 +83,13 @@ body{
   transform: translate(-50%, -50%);
 }
 
+.wrap{
+  position: absolute;
+  top:55%;
+  left: 44.5%;
+  transform: : translate(-50%, -50%);
+}
+
 .container{
   width: 0px;
   height: 50px;
@@ -42,6 +102,23 @@ body{
   position: relative;
   box-shadow: 0 0 50px rgba(0,0,0,0.5);
 }
+/*
+.containers{
+  width: 130px;
+  height: 50px;
+  background: #41484a;
+  right: 68%;
+  left: 32%;
+  transform: : translate(-45%, -50%);
+  text-align: center;
+  line-height: 45px;
+  padding-right: 50px;
+  transition: all 0.5s ease;
+  border-radius: 5px;
+  position: relative;
+  box-shadow: 0 0 50px rgba(0,0,0,0.5);
+}*/
+
 
 .shadow{
   box-shadow: 0 0 50px rgba(0,0,0,0.9);
